--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -151,17 +151,17 @@
     "howDidYouFindOut": "*Cum aţi aflat de Atlantykron?",
     "pick5Courses": "*Alege 5 cursuri la care vei participa",
     "pickOption": "*Ce opțiune alegi?",
-    "infoTax": "În acest preţ este inclusă taxa de participare şi masa (60 de RON pe zi -> prânz + cină). Pentru minori (sub 18 ani) pachetul de masă este obligatoriu. Masa va fi asigurată în perioada 30 Iulie - 4 August.",
+    "infoTax": "În acest preţ este inclusă taxa de participare şi masa (prânz + cină). Pentru minori (sub 18 ani) pachetul de masă este obligatoriu. Masa va fi asigurată în perioada 28 Iulie - 4 August.",
     "howPay": "Cum alegi să plateşti? Transferul bancar beneficiază de o reducere de 20 de lei",
     "bankDetails": "Detalii transfer bancar:",
     "bankAccount": "Cont: RO78RNCB0116172543400001",
     "beneficiary": "Nume Beneficiar: Asociaţia Atlantykron Topalu",
     "transactionDetails": "Detalii Tranzacţie: Nume + Opţiunea aleasă (8/2 zile cu/fară masă)",
     "finalPrices": "* preţuri finale pentru transferul bancar:",
-    "package1": "- 580 (8 zile cu masa inclusă)",
-    "package2": "- 270 (2 zile cu masa inclusă)",
-    "package3": "- 250 (8 zile fără masa inclusă)",
-    "package4": "- 150 (2 zile fără masa inclusă)",
+    "package1": "- 730 (8 zile cu masa inclusă)",
+    "package2": "- 300 (2 zile cu masa inclusă)",
+    "package3": "- 300 (8 zile fără masa inclusă)",
+    "package4": "- 200 (2 zile fără masa inclusă)",
     "dietaryPreferences": "*Preferinţe alimentare",
     "finish": "Finalizare",
     "rules1": " Academia de vară Atlantykron dorește să ofere participanților o experiență unică pe întreaga durată a evenimentului. O frumoasă armonizare cu mediul natural, cursuri și ateliere în aer liber susținute de profesioniști care excelează în domeniile lor. ",
@@ -203,7 +203,7 @@
     "successSignUp": "Te-ai înregistrat cu succes, o să verificăm aplicația ta și te rugăm să aștepți e-mailul nostru de aprobare.",
     "oldAtlantykron": "Site Vechi",
     "archiveAtlantykron": "Arhivă",
-    "mainOrganizer": "Organizator Principal",
+    "mainOrganizer": "Organizator Principal Asociția Atlantkyron",
     "inPartnershipWith": "În parteneriat cu",
     "collaborators": "Colaboratori",
     "contactInfo": "Cel mai rapid mod de a ne contacta este să trimiți un e-mail la contact@atlantkyron.org",
