--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -152,17 +152,17 @@
     "howDidYouFindOut": "*How did you find out about Atlantykron?",
     "pick5Courses": "*Pick 5 courses you will attend",
     "pickOption": "*Pick an option",
-    "infoTax": "The participation fee and meals (lunch and dinner, priced at 60 RON per day) are included in this price. For minors (under 18), the meal package is mandatory. Meals will be provided from July 30th to August 4th.",
+    "infoTax": "The participation fee and meals (lunch and dinner) are included in this price. For minors (under 18), the meal package is mandatory. Meals will be provided from July 28th to August 4th.",
     "howPay": "How do you choose to pay? Bank transfers benefit from a 20 lei discount.",
     "bankDetails": "Bank Transfer Details:",
     "bankAccount": "Account: RO78RNCB0116172543400001",
     "beneficiary": "Beneficiary: Asociaţia Atlantykron Topalu",
     "transactionDetails": "Transaction Reference/Details: Name + The option you pick (8/2 days with/without meals)",
     "finalPrices": "* final prices for the bank transfer",
-    "package1": "- 580 (8 days with meals included)",
-    "package2": "- 270 (2 days with meals included)",
-    "package3": "- 250 (8 days without meals included)",
-    "package4": "- 150 (2 days without meals included)",
+    "package1": "- 730 (8 days with meals included)",
+    "package2": "- 300 (2 days with meals included)",
+    "package3": "- 300 (8 days without meals included)",
+    "package4": "- 200 (2 days without meals included)",
     "dietaryPreferences": "*Dietary preferences",
     "finish": "Submit",
     "rules1": " The Atlantykron Summer Academy aims to provide participants with a unique experience throughout the entire event. It offers a beautiful harmony with the natural environment, outdoor courses and workshops conducted by professionals who excel in their fields. ",
@@ -204,7 +204,7 @@
     "successSignUp": "You've successfully signed up! We will review your application, please wait for our e-mail approval.",
     "oldAtlantykron": "Old Site",
     "archiveAtlantykron": "Archive",
-    "mainOrganizer": "Main Organizer",
+    "mainOrganizer": "Main Organizer Atlantkyron Association",
     "inPartnershipWith": "In Partnership With",
     "collaborators": "Collaborators",
     "contactInfo": "The best way to contact us is to send an email to contact@atlantkyron.org",
